# 09-key-data-extraction

./: 001-key-data-extraction.py  pyproject.toml  zzz-nb001-key-data-extraction.ipynb
.ipynb_checkpoints/: zzz-nb001-key-data-extraction-checkpoint.ipynb
